--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: publish
 on: [push]
 jobs:
-publish-hello-docker-image:
+publish-fakenewsdetection-image:
 runs-on: ubuntu-latest
 steps:
 - uses: actions/checkout@v2
@@ -11,8 +11,8 @@ with:
 registry: ghcr.io
 username: ${{ github.actor }}
 password: ${{ secrets.GITHUB_TOKEN }}
-- name: Build the hello-docker Docker image
+- name: Build  Docker image
 run: |
-       docker build . --tag ghcr.io/deselikem/hello-docker-gcr-demo:latest
-       docker run ghcr.io/deselikem/hello-docker-gcr-demo:latest
-       docker push ghcr.io/deselikem/hello-docker-gcr-demo:latest
+       docker build . --tag ghcr.io/jiya42/fakenewsdetection:latest
+       docker run ghcr.io/jiya42/fakenewsdetectiono:latest
+       docker push ghcr.io/jiya42/fakenewsdetection:latest
